--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "devDependencies": {
     "gulp": "^3.9",
     "gulp-connect": "^2.2.0",
-    "gulp-babel": "~5.2.0",
+    "gulp-babel": "^5.*",
     "gulp-concat": "^2.5.2",
     "gulp-notify": "^2.2",
     "gulp-sourcemaps": "^1.5.2",
