--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "version": "v1.0.0",
-  "bundleName": "react-stargazer",
+  "bundleName": "react-ui",
   "name": "gulp-babel-livereload",
   "devDependencies": {
     "gulp": "^3.9",
@@ -9,9 +9,10 @@
     "gulp-concat": "^2.5.2",
     "gulp-notify": "^2.2",
     "gulp-sourcemaps": "^1.5.2",
-    "react-jsx-anywhere": "^0.*",
 
-    "react": "^0.*",
+    "react": "^0.14.*",
+    "react-dom": "^0.14.*",
+    "react-jsx-anywhere": "^0.*",
     "jquery": "^2.1.*",
     "bootstrap": "^3.*",
     "font-awesome": "^4.*"
