Brian:Add Selection components. Add react and some releate update.

--- a/config/config.json
+++ b/config/config.json
@@ -8,6 +8,7 @@
         ["Table",   "TableChoose",  "src/TableChoose"   ],
         ["Form",    "InputDate",    "src/InputDate"     ],
         ["Message", "Info",         "src/Info"          ],
-        ["Other",   "Pagination",   "src/Pagination"    ]
+        ["Other",   "Pagination",   "src/Pagination"    ],
+        ["Other",   "Selection",    "src/Selection"     ]
     ]
 }
