Brian: Add AutocompleteMuti component.

--- a/config/config.json
+++ b/config/config.json
@@ -8,6 +8,7 @@
         ["Table",   "TableChoose",  "src/TableChoose"   ],
         ["Form",    "InputDate",    "src/InputDate"     ],
         ["Form",    "Autocomplete", "src/Autocomplete"  ],
+        ["Form",    "AutocompleteMuti", "src/AutocompleteMuti"  ],
         ["Form",    "Textarea",     "src/Textarea"      ],
         ["Message", "Info",         "src/Info"          ],
         ["Other",   "Pagination",   "src/Pagination"    ],
